--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1442,4 +1442,8 @@ ul#urlList {
 .group-cv-image-name {
 	width: auto !important;
 }
+/******* admin groups **********/
+.groupDeclineRow {
+	display: none;
+}
 
