--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1251,6 +1251,8 @@ h2.getting-started {
 	font-size: 34px !important;
 	font-weight: 400;
 	text-align:center;
+	line-height: 38px !important;
+	height: auto !important;
 }
 
 .content-header,
